--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +18,6 @@
     "mongoose-delete": "^1.0.2",
     "mongoose-slug-generator": "^1.0.4",
     "mqtt": "^5.10.0",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.7"
   }
 }
